[0.0.5]
- Added a basic component based 3D scene graph
- Changed overall architecture based on the scene graph
- Added scene graph nodes (game objects) to the outline tab as tree structure
- Added creation/deletion of game objects
- Added a ModelComponent
- Added a TerrainComponent
- Added a flexible component inspector widget for game objects
- Fixed rendering of terrain texture tiles
- Improved UI
- Added import of projects
- Updated LibGDX to 1.9.0
- Changed internal persistence of scenes: every scene has now it's own save file (scenes/scene_name.mundus)

[0.0.4] ~ 10/01/2016
- Added Font Awesome as icon font
- Added adding & switching between scenes
- Improved Translate tool
- Added new terrain brush: Flatten
- Added Customizable Fog
- Added a basic skybox (editable, but not savable/exportable)

[0.0.3] ~ 02/01/2016
- Moved Model/asset selection to sidebar
- Improved overall UI/UX
- Added Selection tool
- Added Translate tool
- Added project export to JSON + assets (loadable by runtime)
- Improved error handling

[0.0.2] ~ 25/12/2015
- Added Generic Tool system
- Added support for scenes in one project
- Added support for placement of models inside the world
- Added terrain brush support for multiple terrains
- Updated LibGDX to version 1.7.2

[0.0.1] 22/11/2015
- First version ever pushed to Github

22/11/2015
- Started development